tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-unwrapped-receiver-id-left.old.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-hidden-via-unwrapped-receiver-id-left.rs:30:20
   |
LL |     let _: IShow = id2(test(!n), I).show();
   |            -----   ^^^^^^^^^^^^^^^^^^^^^^^ expected `IShow`, found `OnIShow`
   |            |
   |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
